<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="240dp"
    android:layout_height="341dp"
    android:background="@color/white">

    <EditText
        android:id="@+id/result"
        android:layout_width="224dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberSigned|number"
        android:minHeight="48dp"
        android:text="@string/et_clear"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor,DuplicateSpeakableTextCheck" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:text="@string/btn_7"
        app:layout_constraintStart_toStartOf="@+id/result"
        app:layout_constraintTop_toBottomOf="@+id/btnDelete" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_8"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toTopOf="@+id/btn7" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_9"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toTopOf="@+id/btn8" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_delete"
        app:layout_constraintStart_toEndOf="@+id/btnClear"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_division"
        app:layout_constraintStart_toEndOf="@+id/btnDelete"
        app:layout_constraintTop_toTopOf="@+id/btnDelete" />

    <Button
        android:id="@+id/btnTimes"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_times"
        app:layout_constraintStart_toEndOf="@+id/btnDivision"
        app:layout_constraintTop_toTopOf="@+id/btnDivision" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_minus"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toTopOf="@+id/btn9" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:text="@string/btn_4"
        app:layout_constraintStart_toStartOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_5"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toTopOf="@+id/btn4" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_6"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toTopOf="@+id/btn5" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_plus"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toTopOf="@+id/btn6" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:text="@string/btn_1"
        app:layout_constraintStart_toStartOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_2"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toTopOf="@+id/btn1" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_3"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toTopOf="@+id/btn2" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="108dp"
        android:layout_height="55dp"
        android:text="@string/btn_0"
        app:layout_constraintStart_toStartOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btnDot"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_dot"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toTopOf="@+id/btn0" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="50dp"
        android:layout_height="110dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_equals"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toTopOf="@+id/btn3" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:text="@string/btn_clear"
        app:layout_constraintStart_toStartOf="@+id/result"
        app:layout_constraintTop_toTopOf="@+id/btnDelete" />
</androidx.constraintlayout.widget.ConstraintLayout>